<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_for_the_strongest_pokemon_by" />

            <CheckBox
                android:id="@+id/maxCheckBoxAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setPokemonWithMaxStat"
                android:text="@string/attack" />

            <CheckBox
                android:id="@+id/maxCheckBoxDefense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setPokemonWithMaxStat"
                android:text="@string/defense" />

            <CheckBox
                android:id="@+id/maxCheckBoxHp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setPokemonWithMaxStat"
                android:text="@string/hp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loadRandomPosition"
            android:text="@string/button" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listOfPokemon"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>